# QFileTransfer

./: CMakeLists.txt  main.cpp  mainwidget.cpp  mainwidget.h  mainwindow.cpp  mainwindow.h
Network/: NetworkService.cpp  NetworkService.h
